c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/compound_initializer_too_long_static.c
int main(void) {
    static int arr[3] = {1, 2, 3, 4};
    return arr[2];
}